--- a/docs/custom/revGeocode.yml
+++ b/docs/custom/revGeocode.yml
@@ -2,16 +2,16 @@ openapi: 3.0.3
 info:
   title: Reverse Geocode API
   description: >-
-    <br><br> <strong>Global Coverage</strong> Now Available ! <br>Reverse Geocode API is **Now Available**  for [238 countries](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
-  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
+    <br><br> <strong>Global Coverage</strong> Now Available ! <br>Reverse Geocode API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+  termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
     name: Mappls License Key Signup
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
   contact:
     name: Mappls API Support
     email: apisupport@mappls.com
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
 servers:
         - url: https://apis.mappls.com/advancedmaps/v1
           description: 'Live Prod server for Static Key based APIs'
@@ -56,7 +56,7 @@ paths:
               type: string
           - name: region
             in: query
-            description: 'It takes in the country code. Possible values are listed in a table [here](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md). Default is India (IND).'
+            description: 'It takes in the country code. Possible values are listed in a table [here](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md). Default is India (IND).'
             allowEmptyValue: false
             example: 'IND'
             schema:
