--- a/docs/custom/routing.yml
+++ b/docs/custom/routing.yml
@@ -2,16 +2,16 @@ openapi: 3.0.3
 info:
   title: Routing API
   description: >-
-    Unlock the power of location intelligence for complex routing problems.  <br><br>We at Mappls engineer rigorously tested routing algorithms for safe and efficient journeys that incorporate anticipated real time traffic updates for the most optimal and energy efficient routes. <br><br> Routing and displaying driving directions on map, including instructions for navigation, distance to destination, traffic etc. are few of the most important parts of developing a map based application. This REST API calculates driving routes between specified locations including via points based on route calculation type(optimal or shortest). <br><br> <strong>Global Coverage</strong> Now Available ! <br>Routing API is **Now Available**  for [238 countries](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md) across the world.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Routing APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
-  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
+    Unlock the power of location intelligence for complex routing problems.  <br><br>We at Mappls engineer rigorously tested routing algorithms for safe and efficient journeys that incorporate anticipated real time traffic updates for the most optimal and energy efficient routes. <br><br> Routing and displaying driving directions on map, including instructions for navigation, distance to destination, traffic etc. are few of the most important parts of developing a map based application. This REST API calculates driving routes between specified locations including via points based on route calculation type(optimal or shortest). <br><br> <strong>Global Coverage</strong> Now Available ! <br>Routing API is **Now Available**  for [238 countries](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md) across the world.<br><br> **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Routing APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+  termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
     name: Mappls License Key Signup
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
   contact:
     name: Mappls API Support
     email: apisupport@mappls.com
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
 servers:
   - url: https://apis.mappls.com/advancedmaps/v1
     description: 'Live Prod server for Routing APIs'
@@ -200,7 +200,7 @@ paths:
         - name: region
           in: query
           description: >-
-            This parameter is optional for India; for other countries (such as Sri Lanka, Nepal, Bangladesh, Bhutan + many more) this parameter is mandatory. Possible values are listed in a table [here](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md).
+            This parameter is optional for India; for other countries (such as Sri Lanka, Nepal, Bangladesh, Bhutan + many more) this parameter is mandatory. Possible values are listed in a table [here](https://github.com/mappls-api/mappls-rest-apis/blob/main/docs/countryISO.md).
           allowEmptyValue: false
           schema:
             type: string
