--- a/docs/custom/routingBiking.yml
+++ b/docs/custom/routingBiking.yml
@@ -3,15 +3,15 @@ info:
   title: Routing API for Two Wheelers
   description: >-
     **Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Routing APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
-  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
+  termsOfService: 'https://about.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
     name: Mappls License Key Signup
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
   contact:
     name: Mappls API Support
     email: apisupport@mappls.com
-    url: https://www.mappls.com/api/
+    url: https://about.mappls.com/api/
 servers:
   - url: https://apis.mappls.com/advancedmaps/v1
     description: 'Live Prod server for Routing APIs'
